<resources>
<string name="accept_location">Record Location</string>
<string name="accuracy">Accuracy</string>
<string name="add_another">Add Group</string>
<string name="add_another_repeat">Add another \"%s\" group?</string>
<string name="add_repeat">Add a new \"%s\" group?</string>
<string name="add_repeat_no">Do Not Add</string>
<string name="advance">advance to next prompt</string>
<string name="altitude">Altitude</string>
<string name="app_name">FORMA Viewer</string>
<string name="audio_file_error">No audio file was specified.</string>
<string name="audio_file_invalid">File: %s is not a valid audio file.</string>
<string name="backup">return to previous prompt</string>
<string name="barcode_scanner_error">Sorry, Barcode Scanner is not installed!</string>
<string name="cancel">Cancel</string>
<string name="cancel_loading_form">Cancel</string>
<string name="cancel_location">Cancel</string>
<string name="cancel_saving_form">Cancel</string>
<string name="capture_audio">Record Sound</string>
<string name="capture_image">Take Picture</string>
<string name="capture_video">Record Video</string>
<string name="change_language">Change Language</string>
<string name="change_password">Change Password</string>
<string name="change_server_url">Change URL</string>
<string name="change_user">Change Username</string>
<string name="clearanswer_confirm">Remove the response to \"%s\"?</string>
<string name="clear_answer">Remove Response</string>
<string name="clear_answer_ask">Remove This Response?</string>
<string name="clear_answer_no">Cancel</string>
<string name="completed_data">Complete (%s)</string>
<string name="data">Saved Forms</string>
<string name="data_saved_error">Sorry, data save failed!</string>
<string name="data_saved_ok">Form successfully saved!</string>
<string name="default_server_url">http://forma-collect.appspot.com</string>
<string name="delete_confirm">Delete %s item(s)?</string>
<string name="delete_file">Delete Selected</string>
<string name="delete_no">Do Not Delete</string>
<string name="delete_repeat">Remove Group</string>
<string name="delete_repeat_ask">Remove This Group?</string>
<string name="delete_repeat_confirm">Remove group \"%s\" and all of its sub-groups?</string>
<string name="delete_repeat_no">Cancel</string>
<string name="delete_yes">Delete Items</string>
<string name="discard_answer">Remove Response</string>
<string name="discard_group">Remove Group</string>
<string name="download">Get Selected</string>
<string name="download_forms_result">Dowloading Forms Result</string>
<string name="downloading_data">Connecting to Server</string>
<string name="download_all_successful">All forms downloaded successfully.</string>
<string name="download_complete">Form Get Complete</string>
<string name="download_failed_with_error">Form \"%1$s\" failed. %2$s.</string>
<string name="do_not_change">Cancel</string>
<string name="do_not_exit">Cancel</string>
<string name="do_not_save">Ignore Changes</string>
<string name="enter">start</string>
<string name="entering_repeat">Add Group</string>
<string name="entering_repeat_ask">Add New Group?</string>
<string name="enter_data">Start New Form</string>
<string name="enter_data_button">Start New Form</string>
<string name="enter_data_description">%s has been loaded.</string>
<string name="enter_data_message">To navigate, swipe your finger horizontally on the screen as if turning pages in a book. Press the Menu button for more choices.</string>
<string name="error_downloading">Error Getting Form</string>
<string name="error_occured">Error Occurred</string>
<string name="fetching_file">Getting %1$s.\n\nForm %2$s of %3$s form(s)...</string>
<string name="file_deleted_error">Sorry, %1$s of %2$s selected item(s) failed to delete!</string>
<string name="file_deleted_ok">%s item(s) successfully deleted!</string>
<string name="file_invalid">File: %s is invalid.</string>
<string name="file_missing">File: %s is missing.</string>
<string name="finished_disk_scan">Finished scanning...All forms loaded</string>
<string name="form">Form</string>
<string name="forms">New Forms</string>
<string name="form_renamed">%1$s was renamed %2$s.</string>
<string name="getting_location">Loading Location...</string>
<string name="get_barcode">Get Barcode</string>
<string name="get_forms">Get New Forms</string>
<string name="get_location">Record Location</string>
<string name="provider_disabled_error">Sorry, Location providers are disabled!</string>
<string name="invalid_answer_error">Sorry, this response is invalid!</string>
<string name="jump_to_beginning">Go To Start</string>
<string name="jump_to_end">Go To End</string>
<string name="jump_to_previous">Go Up</string>
<string name="latitude">Latitude</string>
<string name="leave_repeat_yes">Do Not Add</string>
<string name="leaving_repeat">Add Group</string>
<string name="leaving_repeat_ask">And One More Group?</string>
<string name="list_failed_with_error">Form listing failed. %s.</string>
<string name="loading_form">Loading Form</string>
<string name="load_remote_form_error">Error Getting Form List</string>
<string name="location_provider_accuracy">Using %1$s. Accuracy is %2$s m.</string>
<string name="location_provider">Using %1$s provider. Please wait for greater accuracy.</string>
<string name="location_accuracy">Accuracy is %1$s m...</string>
<string name="longitude">Longitude</string>
<string name="main_menu">Main Menu</string>
<string name="main_menu_details">Powered by ODK Collect</string>
<string name="main_menu_message">FORMA Viewer 1.0.0</string>
<string name="manage_files">Manage Forms</string>
<string name="mark_finished">Mark Form as Finished</string>
<string name="no">No</string>
<string name="noselect_error">Sorry, you have not selected any items!</string>
<string name="no_capture">Nothing recorded yet.</string>
<string name="no_items_display">Nothing available to display.</string>
<string name="no_items_error">Nothing available to %s!</string>
<string name="no_sd_error">Sorry, your memory card is not working!</string>
<string name="ok">OK</string>
<string name="one_capture">Multimedia recorded.</string>
<string name="parse_error">Sorry, unable to parse form.</string>
<string name="parse_legacy_formlist_failed">The server has not provided an available-forms document compatible with Aggregate 0.9.x. : %s</string>
<string name="parse_openrosa_formlist_failed">The server has not provided an available-forms document compliant with the OpenRosa version 1.0 standard: %s</string>
<string name="password">Password</string>
<string name="play_audio">Play Sound</string>
<string name="play_video">Play Video</string>
<string name="please_wait">Please wait a few moments.</string>
<string name="please_wait_long">Please wait. This could take a few minutes.</string>
<string name="quit_application">Exit %s</string>
<string name="quit_entry">Save Form and Exit</string>
<string name="refresh">Refresh</string>
<string name="replace_audio">Replace Sound</string>
<string name="replace_barcode">Replace Barcode</string>
<string name="replace_image">Replace Picture</string>
<string name="replace_location">Replace Location</string>
<string name="replace_video">Replace Video</string>
<string name="required_answer_error">Sorry, this response is required!</string>
<string name="review">continue</string>
<string name="review_data">Continue Saved Form</string>
<string name="review_data_button">Continue Saved Form</string>
<string name="saved_data">Incomplete (%s)</string>
<string name="save_all_answers">Save Form</string>
<string name="save_data_message">Please save data to keep your responses.</string>
<string name="save_enter_data_description">You have reached the end of %s.</string>
<string name="saving_form">Saving Form...</string>
<string name="send">send</string>
<string name="sending_items">Sending %1$s of %2$s item(s)</string>
<string name="send_data">Send Finished Forms</string>
<string name="send_data_button">Send Finished Forms</string>
<string name="send_selected_data">Send Selected</string>
<string name="server_auth_credentials">Please enter username and password for server:\n%s</string>
<string name="server_requires_auth">Server Requires Authentication</string>
<string name="server_url">URL</string>
<string name="server_preferences">Server</string>
<string name="toggle_selected">Toggle All</string>
<string name="trigger">OK. Please continue.</string>
<string name="uploading_data">Sending Form</string>
<string name="upload_all_successful">%s item(s) sent successfully.</string>
<string name="upload_some_failed">Sorry, %s item(s) failed to send!</string>
<string name="url_error">Sorry, invalid URL!</string>
<string name="username">Username</string>
<string name="view_hierarchy">Go To Prompt</string>
<string name="open_data_kit">Open Data Kit</string>
<string name="general_preferences">Preferences</string>
<string name="change_username">Change Username</string>
<string name="click_to_web">Touch for http://whizbangsystems.net</string>
<string name="first_run">Do first run on restart</string>
<string name="client">Client</string>
<string name="show_splash">Show splash screen</string>
<string name="splash_path">Selected image</string>
<string name="default_splash_path">ODK Default</string>
<string name="select_another_image">Select another image</string>
<string name="use_odk_default">Use default image</string>
<string name="change_splash_path">Change image</string>
<string name="show_location">Show Location</string>
<string name="app_url">http://whizbangsystems.net</string>
<string name="keep_changes">Save Changes</string>
<string name="go_to_location">Go to Location</string>
<string name="change_formlist_url">Change form list path. (This gets added on to the specified server URL)</string>
<string name="protocol">Protocol</string>
<string name="change_protocol">Change protocol</string>
<string name="change_submission_url">Change submission path.  (This gets added on to the specified server URL)</string>
<string name="formlist_url">Custom Form list path</string>
<string name="submission_url">Custom Submission path</string>
<string name="font_size">Font size</string>
<string name="change_font_size">Change font size</string>
<string name="form_scan_starting">Scanning for forms...</string>
<string name="form_scan_finished">Form scanning completed</string>
<string name="powered_by_odk">v1.1.7 - Powered by Open Data Kit</string>
<string name="default_odk_formlist">/formList</string>
<string name="default_odk_submission">/submission</string>
<string name="access_error">Error while accessing %s: </string>
<string name="manifest_server_error">Manifest reply does not report an OpenRosa version -- bad server?</string>
<string name="root_element_error">Root element is not &lt;manifest\&gt; -- was %s</string>
<string name="root_namespace_error">Root element Namespace is incorrect: %s</string>
<string name="manifest_tag_error">Manifest entry %s is missing one or more tags: filename, hash, or downloadUrl</string>
<string name="form_download_progress">%1$s. Getting media files: %2$s of %3$s</string>
<string name="file_fetch_failed">Fetch of %1$s failed: %2$s (%3$s)</string>
<string name="fetching_manifest">%s. Getting manifest </string>
<string name="success">SUCCESS</string>
<string name="no_forms_uploaded">Sorry, no forms were uploaded.</string>
<string name="upload_results">Upload Results</string>
<string name="xform_parse_error">XForm parse error.  %1$s is missing element %2$s</string>
<string name="choose_sound">Choose Sound</string>
<string name="choose_video">Choose Video</string>
<string name="choose_image">Choose Image</string>
<string name="selected">Selected: </string>
<string name="select_answer">Select Answer</string>
<string name="save_form_as">Form will be saved as:</string>
<string name="save_as_error">Saved name must not be blank!</string>
<string name="view_maps">View Maps</string>
<string name="view_maps_button">View Maps</string>
</resources>